<resources>
    <string name="app_name">ПрофКонтур</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="TakeTest">Получить тест</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StartTestString">Начать тест</string>
    <string name="CountMinOftestString">Количество минут на тест</string>
    <string name="TestString">Тест</string>
    <string name="TestResultSrting">Результаты теста</string>
    <string name="TestsString">Тестирования</string>
    <string name="MethodicTestsString">Тесты</string>
    <string name="NextString">Следующий вопрос</string>
    <string name="PriviosString">Предыдущий</string>
    <string name="CountQuestString">Количество вопросов</string>
    <string name="BackString">Вернуться</string>
    <string name="AboutProfkonturString">Цифровая платформа для создания интернет-тестов, прохождения тестирования и обучения</string>
    <string name="GetAnswerString">Получить отчет</string>
</resources>