<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.profkontur.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_aboutTestFragment"
            app:destination="@id/aboutTestFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.android.profkontur.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.android.profkontur.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/aboutTestFragment"
        android:name="com.android.profkontur.View.AboutTestFragment"
        android:label="fragment_about_test"
        tools:layout="@layout/fragment_about_test" >
        <action
            android:id="@+id/action_aboutTestFragment_to_testReportFragment"
            app:destination="@id/testReportFragment" />
    </fragment>
    <fragment
        android:id="@+id/testReportFragment"
        android:name="com.android.profkontur.View.TestReportFragment"
        android:label="fragment_test_report"
        tools:layout="@layout/fragment_test_report" >
        <action
            android:id="@+id/action_testReportFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>