<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_gray_background_color"
    tools:context=".View.Test.MetaTestFragment">

    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:indeterminateTint="@color/main_blue_text_color"
        style="?android:attr/progressBarStyleLarge"
        android:indeterminate="false"
        android:id="@+id/ProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:id="@+id/AboutTestLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_margin="16dp"
            app:cardElevation="8dp"
            app:strokeWidth="0dp"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/TypeTestTextView"
                    android:text="Тип"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_gray_text_color"
                    android:textSize="16sp" />
                <TextView
                    android:text="Название теста"
                    android:gravity="center"
                    android:id="@+id/TestNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/main_black_text_color"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:layout_marginTop="12dp"
                    android:text="Инструкция теста"
                    android:textColor="@color/main_black_text_color"
                    android:id="@+id/InstructionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
                <TextView
                    android:text="Описание теста"
                    android:id="@+id/DscTestTextView"
                    android:layout_width="match_parent"
                    android:textColor="@color/main_gray_text_color"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/timer_24px"/>
                    <TextView
                        android:layout_marginLeft="6dp"
                        android:text="@string/CountMinOftestString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_marginLeft="4dp"
                        android:text=""
                        android:textStyle="bold"
                        android:id="@+id/TimeTestTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/checklist_24px"/>
                    <TextView
                        android:layout_marginLeft="6dp"
                        android:text="@string/CountQuestString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_marginLeft="4dp"
                        android:text=""
                        android:textStyle="bold"
                        android:id="@+id/QuestionCountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp"/>
                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/AuthorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/groups_24px"/>
                    <TextView
                        android:layout_marginLeft="6dp"
                        android:text="Автор"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_marginLeft="4dp"
                        android:text=""
                        android:textStyle="bold"
                        android:id="@+id/AuthorTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp"/>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/StartTestButton"
            android:backgroundTint="@color/main_blue_text_color"
            app:cornerRadius="8dp"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="50dp"
            android:text="@string/StartTestString"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            app:icon="@drawable/chevron_right_24px"
            app:iconGravity="end" />

    </LinearLayout>


</FrameLayout>